# torch-named-linops

./: .gitignore  .gitmodules  CONVENTIONS.md  DEVELOPMENT.md  README.md  environment.yaml  environment_cuda11.yaml  install.sh  justfile  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  python-package-mamba.yml  release.yml  test-python.yml
benchmarks/: .gitignore  _cupy_benchmark.py  _memory_tracker.py  _report.py  conftest.py  test_benchmarks.py
benchmarks/results/latest/: metadata.json  results.json
debug/: debug_finufft.py  debug_gridded_linop.py  debug_igrog.py
debug/notebooks/: test_multi_grid.py
dev/batch_serialize/: serialize_batched_linop.py
dev/cuda_streams/: _parallel.py  profile_streams.py  profile_streams_v3.py  profile_streams_v4.1.py  profile_streams_v4.py  profile_todevice.py
dev/index_determinism/: debug_determinism.py
dev/property_forwarding/: debug_property.py
dev/toeplitz/: view_psf_mo.py
docs/: .gitignore  gen_ref_pages.py  getting_started.md  index.md
docs/api/: simple_linop.md
docs/assets/css/: codecells.css  dark_mode_shell_output.css  extras.css  hide_repo.css  logo.css
docs/benchmarks/: .gitignore  cpu.md  gpu.md  index.md  methodology.md
docs/explanations/: copying_linops.md  design_notes.md  faq.md  index.md  multi_gpu.md  named_abstractions.md  why_this_package.md
docs/getting_started/: index.md  installation.md
docs/howto/: custom_linops.md  how_to.md  index.md  mri_tutorial.md
docs/javascripts/: mathjax.js
docs/reference/: algorithms.md  index.md  linops.md  utils.md
docs/reference/alg/: cg.md  poly.md  powermethod.md  svd.md
docs/reference/functional/: index.md  interp.md  nufft.md  pad.md  unfold.md
docs/reference/linops/: add.md  array_manipulation.md  batch.md  chain.md  concat_stack.md  dense.md  device.md  diagonal.md  einops.md  fft.md  identity.md  index.md  interp.md  namedlinop.md  nufft.md  pad.md  sampling.md  split.md  threadable.md
docs/reference/nameddim/: matching.md  nameddimension.md  namedshape.md
docs/reference/utils/: benchmark.md  config.md  math.md  memory.md
docs/source/: conf.py  faq.md  getting_started.md  getting_started.rst  how_to.md  index.md  index.rst  installation.md  installation.rst  why_this_package.md
docs/source/_static/: codecells.css
docs/source/_templates/: linop_template.rst
docs/source/explanations/: design_notes.md
docs/source/howto/: how_to.md  mri_tutorial.md
docs/source/reference/: algorithms.md  api.md  linops.md  namedlinop.md  utils.md
docs/superpowers/plans/: 2026-07-10-convolution-linop.md
docs/superpowers/specs/: 2026-07-10-convolution-linop-design.md  2026-07-16-simple-linop-design.md
docs/tutorials/: 01_custom_linops.ipynb  01_custom_linops.md  01_custom_linops.py.md5  index.md  mg_execution_times.md
examples/: spiral_sense.py
examples/benchmark/: torch_benchmark.py
notebooks/: api_test.py  batching.py  cg_test.py  pytorch_save_load.py  scheduler.py  scratch.py  test_datagen.py  test_gridded_fft.py  test_linops.py  test_sp_nufft.py
scripts/: build_tutorials.py
scripts/benchmark/: mps_bench.py
scripts/simulate/: small.py
src/torchlinops/: __init__.py  batching.py  config.py  cuda_trace.py  linop.py  testing.py
src/torchlinops/_core/: __init__.py  _batch.py  _distributed_batch.py  _linops.py  _shapes.py  _tiling.py
src/torchlinops/alg/: __init__.py  pcg.py  poly.py  powermethod.py  svd.py
src/torchlinops/app/: _base.py  _cg.py  base.py  cg.py
src/torchlinops/core/: __init__.py  base.py  batching.py  linop.py  linops.py  scheduler.py  sequential.py  shapes.py  tiling.py
src/torchlinops/functional/: __init__.py  _nufft.py  _pad.py
src/torchlinops/linops/: __init__.py  add.py  array_to_blocks.py  batch.py  breakpt.py  chain.py  concat.py  convolution.py  dense.py  device.py  diagonal.py  einops.py  fft.py  identity.py  interp.py  mpbatch.py  namedlinop.py  nufft.py  pad_last.py  sampling.py  scalar.py  schedule.py  simple.py  split.py  stack.py  threadable.py  trunc_pad.py
src/torchlinops/mrf/: functional.py  linops.py
src/torchlinops/mri/: _sp_nufft.py  linops.py
src/torchlinops/nameddim/: _matching.py  _nameddim.py  _nameddimcollection.py  _namedshape.py  _shapes.py
src/torchlinops/scripts/: diagnostic.py
src/torchlinops/shapes/: manager.py
src/torchlinops/tests/: conftest.py  test_add.py  test_advanced.py  test_array_to_blocks.py  test_base.py  test_batch.py  test_caching.py  test_center_pad_crop.py  test_chain.py  test_concat.py  test_config.py  test_dense.py  test_device.py  test_device_coverage.py  test_diagonal.py  test_dispatch_coverage.py  test_einops.py  test_fft.py  test_identity.py  test_interp.py  test_nameddim.py  test_nameddim_coverage.py  test_nameddimcollection.py  (+15 more)
test/: conftest.py  scratch.py  test_datagen.py  test_linops.py
test/core/: test_linops_adjoints.py
test/mrf/: test_sense.py
tests/: test_add.py  test_array_to_blocks.py  test_chain.py  test_concat.py  test_convolution.py  test_dense.py  test_dense_auto_shapes.py  test_dense_from_einstr.py  test_device.py  test_device_coverage.py  test_diagonal.py  test_einops.py  test_fft.py  test_identity.py  test_interp.py  test_kernels.py  test_nameddim_coverage.py  test_nameddimcollection.py  test_namedlinop_coverage.py  test_normal.py  test_nufft.py  test_ordinal_any.py  test_pad_last.py  test_sampling.py  test_scalar.py  test_shape_inference.py  test_simple_linop.py  test_split.py  test_split_utils.py  test_stack.py  test_trunc_pad.py
tutorials/: .gitignore  01_custom_linops.py  README.md  basics.py  custom_linop.py  mri_reconstruction.py
(+310 files in other folders)
