[project]
name = "torch-named-linops"
description = "A flexible linear operator abstraction in pytorch."
authors = [
    { name = "Mark Nishimura", email = "markn1@stanford.edu" }
]
dependencies = [
    "torch>=2.1",
    "torchvision",
    "torchaudio",
    "einops",
    "tqdm",
    "pyyaml",
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
-ra -q \
-m 'not slow and not gpu and not plot'
"""
# --ignore libraries --ignore notebooks"
filterwarnings = [
    "ignore::DeprecationWarning:sigpy.*",
    "ignore::DeprecationWarning:cupy.*",
]
markers = [
    "slow: tests that are slow (deselect with '-m \"not slow\"')",
    "big: tests that require large memory (cpu or gpu)",
    "gpu: tests that require a gpu",
    "plot: tests that involve plotting",
]

[tool.rye]
managed = true
dev-dependencies = [
    "gdown", # Downloading test files
    "marimo", # Better notebooks
    "matplotlib", # Visualization
    "pytest", # Unit tests
    "pytest-cov", # Code coverage
    "ruff", # Linting
    "pre-commit", # pre-commit hooks
    "sphinx", # Build system
    "furo",   # Theme
    "myst-parser", # Markdown instead of reStructuredText
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/torchlinops"]

[tool.hatch.version]
path = "src/torchlinops/__init__.py"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "F403", # from ___ import *
    "F401", # unused imports
]
exclude = ["**/tests/**"]
