[project]
name = "torch-named-linops"
description = "A flexible linear operator abstraction in pytorch."
authors = [
    { name = "Mark Nishimura", email = "markn1@stanford.edu" }
]
dependencies = [
    "triton>=3.0",
    "jaxtyping>=0.2.36",
    "setuptools>=75.6.0", # For triton
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "einops>=0.8.0",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
]
sigpy = [
    "numba==0.60.0",
    "llvmlite==0.43.0",
    "sigpy==0.1.27",
    "cupy-cuda12x>=13.3.0",
    "easydict>=1.13",
]
all = [{include-group="dev"}, {include-group="sigpy"}]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/torchlinops"]

[tool.hatch.version]
path = "src/torchlinops/__init__.py"

# [tool.ruff]
# target-version = "py310"

[tool.ruff.lint]
ignore = [
    "F403", # from ___ import *
    "F401", # unused imports
    "F541", # f-string without placeholders
    "F722", # Allow jaxtyping annotations syntax (e.g. Float[Tensor, "B ..."])
]
exclude = [
    "**/tests/**",
    "dev/**",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
-ra -q \
-m 'not slow'
"""
# --ignore libraries --ignore notebooks"
filterwarnings = [
    "ignore::DeprecationWarning:sigpy.*",
    "ignore::DeprecationWarning:cupy.*",
]
markers = [
    "slow: tests that are slow (deselect with '-m \"not slow\"')",
    "big: tests that require large memory (cpu or gpu)",
    "gpu: tests that require a gpu",
    "plot: tests that involve plotting",
]
